# api-relay-cnav

./: .dockerignore  .gitignore  Makefile  README.md  compose.yaml  manage.py  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
api_relay_cnav/: settings.py  urls.py  wsgi.py
api_relay_cnav/healthcheck/: urls.py  views.py
api_relay_cnav/relay/: serializers.py  urls.py  views.py
docker/django/: Dockerfile  entrypoint.sh  uwsgi.ini
tests/: conftest.py  tests.py
tests/healthcheck/: tests.py
