[project]
name = "api-relay-cnav"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django-datadog-logger>=0.9",
    "django-environ>=0.14",
    "django==6.0.*",
    "djangorestframework>=3.17",
    "httpx>=0.28",
    "itoutils[django]>=25.12.22.0",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "uwsgi==2.0.*",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.0",
    "factory-boy>=3.3",
    "freezegun>=1.5.1",
    "ipython>=9.14.1",
    "itoutils[django-testing]>=25.12.22.0",
    "pre-commit>=4.0",
    "pytest-django>=4.9",
    "pytest-env>=1.6",
    "pytest-mock>=3.15",
    "pytest-xdist>=3.6",
    "respx>=0.22",
    "ruff>=0.9",
    "syrupy>=4.8",
]


[tool.setuptools]
package-dir = {"" = "api_relay_cnav"}


[tool.pytest]
minversion = "9.0"
DJANGO_SETTINGS_MODULE = "api_relay_cnav.settings"
python_files = ["tests*.py", "test_*.py"]
addopts = [
    "--reuse-db",
    "--strict-markers",
]

[tool.pytest_env]
DJANGO_ENVIRONMENT = "TEST"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
# see prefixes in https://docs.astral.sh/ruff/rules/
select = [
    "ANN",  # flake8-annotations
    "B", # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DJ", # flake8-django,
    "DTZ",  # flake8-datetimez
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "FA",  # flake8-future-annotations
    "I",  # isort
    "PT",  # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "UP",  # pyupgrade
    "W",  # pycodestyle warnings
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["api_relay_cnav"]
lines-after-imports = 2

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
